--- a/HANGMAN/style.css
+++ b/HANGMAN/style.css
@@ -23,34 +23,6 @@ button, input {
     background: url("images/none.png");
 }
 
-#btnPlay {
-    position: absolute;
-    top: 250px;
-    left: 400px;
-    width: 150px;
-    height: 50px;
-    font-family: 'Righteous', cursive;
-    font-size: 300%;
-    border: none;
-    background-color: rgba(0, 0, 0, 0);
-    color: purple;
-    transition: 0.75s;
-}
-
-#btnPlay:hover {
-    position: absolute;
-    top: 250px;
-    left: 390px;
-    width: 150px;
-    height: 50px;
-    font-family: 'Righteous', cursive;
-    font-weight: bolder;
-    font-size: 400%;
-    border: none;
-    background-color: rgba(0, 0, 0, 0);
-    color: pink;
-}
-
 #gameTitle {
     font-family: 'Sigmar One', cursive;
     font-size: 2em;
@@ -82,9 +54,16 @@ button, input {
     flex-direction: row;
 }
 
+#btnSound {
+    position: relative;
+    font-size: 2.2em;
+    color: whitesmoke;
+    width: 40px;
+}
+
 #btnHint, #btnNew{
     margin: 0px;
-    width: 100px;
+    width: 80px;
     height: 36px;
     background: linear-gradient(#03FF0A,#018A06);
     border: none;
