update cursor:pointer for button

--- a/FLAPPY BIRD/style.css
+++ b/FLAPPY BIRD/style.css
@@ -4,6 +4,11 @@ body{
     background-size: cover;
 }
 
+button {
+    cursor: pointer;
+    outline: none;
+}
+
 canvas {
     border-radius: 10px;
     border: 10px solid rgb(100, 92, 92);
