--- a/HANGMAN/style.css
+++ b/HANGMAN/style.css
@@ -10,6 +10,7 @@ a {
 }
 
 button, input {
+    cursor: pointer;
     outline: none;
 }
 
@@ -55,6 +56,7 @@ button, input {
 }
 
 #btnSound {
+    cursor: pointer;
     position: relative;
     font-size: 2.2em;
     color: whitesmoke;
