--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ html {
     top: 0;
     left: 0;
     width: 100%;
+    height: 100%;
     z-index: 100;
 }
 
@@ -1211,6 +1212,11 @@ footer{
 @media (max-width: 767px) {
     #scrollPath, #progressbar {
         display: none;
+    }
+
+    #loading img {
+        content: url('https://www.frogx3.com/wp-content/uploads/2017/03/logotipos-animados-para-tu-inspiracion-10.gif');
+        object-fit: cover;
     }
 
     nav {
