--- a/css/certificates-style.css
+++ b/css/certificates-style.css
@@ -181,6 +181,7 @@ body {
     justify-content: center;
     position: fixed;
     top: 0;
+    z-index: 1000000;
 }
 
 .img-full-screen .img-full-screen__link {
