--- a/PROJECTS/ROOM - HOMEPAGE/styles.scss
+++ b/PROJECTS/ROOM - HOMEPAGE/styles.scss
@@ -26,7 +26,6 @@ $VERY-DARK-GRAY:rgb(69,69,69);
     width: 100%;
     display: flex;
     flex-direction: row;
-    min-height: 65vh;
 
     .container__top__first {
       height: auto;
@@ -198,6 +197,7 @@ $VERY-DARK-GRAY:rgb(69,69,69);
 @media (min-width:768px) {
   .container {
     .container__top {
+        height: 65vh;
         nav {
           position: relative;
           padding: 0;
@@ -227,6 +227,7 @@ $VERY-DARK-GRAY:rgb(69,69,69);
       flex-direction: column;
     }
     .container__top {
+      min-height: 65vh;
       .container__top__first {
         background: url('../images/mobile-image-hero-1.jpg');
         background-size: cover;
