--- a/css/styles.css
+++ b/css/styles.css
@@ -1090,8 +1090,54 @@ nav {
 }
 
 .formBx {
-    border-radius: 20px;
-    width: 70%;
+    background: url('../images/contact-background.jpg');
+    background-size: cover;
+    min-height: 40vh;
+    width: 60%;
+    padding-left: 40px;
+    padding-right: 40px;
+    box-shadow:3px 3px 3px 3px rgba(0,0,0,0.5);
+    margin-bottom: 20px;
+}
+
+.formBx form {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.formBx form h3 {
+    text-transform: uppercase;
+    text-shadow: 1px 2px rgb(170, 168, 168);
+}
+
+.formBx form input {
+    width: 100%;
+    height: 7%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    box-shadow:1px 1px 1px 1px rgba(0,0,0,0.5);
+}
+
+.formBx form textarea {
+    margin-top: 10px;
+    height: 50%;
+    width: 100%;
+    box-shadow:1px 1px 1px 1px rgba(0,0,0,0.5);
+}
+
+.formBx form input:nth-child(5) {
+    align-self: flex-end;
+    width: 20%;
+    transition: 0.3s;
+}
+
+.formBx form input:nth-child(5):hover {
+    background: rgb(49, 49, 49);
+    color: #fff;
 }
 
 .contact-info {
@@ -1099,7 +1145,7 @@ nav {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 105vh;
+    height: 90vh;
 }
 
 .contact-info .contact-info__item {
@@ -1582,7 +1628,25 @@ footer .ctn .footer__links ul li a:hover {
 
     .formBx {
         align-self: center;
-        width: 90%;
+        width: 85%;
+        min-height: 60vh;
+    }
+
+    .formBx form {
+        height: 50vh;
+    }
+    .formBx form input{
+        height: 20%;
+    }
+
+    .formBx form textarea {
+        min-height: 150px;
+        text-overflow: ellipsis;
+    }
+
+    .formBx form input:nth-child(5){
+        height: 15%;
+        width: 30%;
     }
 
     .contact-info {
