--- a/css/styles.css
+++ b/css/styles.css
@@ -299,8 +299,7 @@ nav {
 #home {
     width: 100%;
     height: 100vh;
-    background: url('https://i.gifer.com/7Gsw.gif') center no-repeat;
-    animation: backgroundChange 4s ease-in-out infinite;
+    background: url('https://cdn.dribbble.com/users/1141571/screenshots/3978167/dribbble_3.gif') center no-repeat;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -1229,7 +1228,7 @@ nav {
 }
 
 .contact-items ul {
-    height: 60%;
+    height: 50%;
     align-self: center;
     margin: 0;
     padding: 10px;
