--- a/css/styles.css
+++ b/css/styles.css
@@ -1139,22 +1139,37 @@ nav {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .formBx {
     background: url('../images/contact-background.jpg');
     background-size: cover;
     min-height: 40vh;
-    width: 60%;
+    width: 50%;
     padding-left: 40px;
     padding-right: 40px;
+    border-radius: 5px;
     box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.5);
     margin-top: 10px;
     margin-bottom: 50px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    flex-direction: column;
     align-items: center;
+    position: relative;
+}
+
+.formBx .formBx__title {
+    text-transform: uppercase;
+    text-shadow: 1px 1px rgb(161, 159, 159);
+}
+
+.formBx .fs_embed {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    border: none;
 }
 
 .formBx form {
@@ -1213,6 +1228,7 @@ nav {
     background-size: cover;
     padding-top: 20px;
     padding-bottom: 20px;
+    border-radius: 5px;
     box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.6);
     width: 80%;
     display: flex;
@@ -1670,6 +1686,9 @@ footer .ctn .footer__links ul li a:hover {
         width: 85%;
         min-height: 70vh;
     }
+    .formBx .formBx__title {
+        font-size: 2.2em;
+    }
     .formBx form {
         height: 50vh;
     }
@@ -1689,6 +1708,9 @@ footer .ctn .footer__links ul li a:hover {
         width: 90%;
         height: 85vh;
         padding-bottom: 20px;
+    }
+    .contact-info .contact-info__item {
+        margin-bottom: 15px;
     }
 }
 
@@ -1782,6 +1804,9 @@ footer .ctn .footer__links ul li a:hover {
     }
     .project-card .contentBx .play:hover {
         font-size: 0.8em;
+    }
+    .formBx .formBx__title {
+        font-size: 1.5em;
     }
     #contact .ctn {
         padding-left: 0;
