--- a/css/roadmap.css
+++ b/css/roadmap.css
@@ -5,7 +5,7 @@
 }
 
 .roadmap {
-    width:80%;
+    width: 80%;
 }
 
 .roadmap__events {
@@ -22,18 +22,22 @@
     content: "";
     width: 0%;
     height: 4px;
-    background-color: #17171a;
+    background-color: #000000;
     border-radius: 2px;
     -webkit-transition: all .5s linear;
     -o-transition: all .5s linear;
     transition: all .5s linear;
 }
 
+#my-knowledge .roadmap__events:after {
+    background-color: #ff7b00;
+}
+
 .roadmap__events__event {
     position: absolute;
     width: 280px;
     height: 200px;
-    margin-left: -140px;
+    margin-left: -140prgb(0, 0, 0);
     list-style: none;
     font-size: 16px;
 }
@@ -49,9 +53,30 @@
     transition: all .3s cubic-bezier(.25, .1, .25, 1.3);
 }
 
+#my-knowledge .roadmap__events__event:after {
+    background-color: #ff7b00;
+}
+
+#my-knowledge .roadmap__events__event:before {
+    box-shadow: 0 0 0 3px rgba(59, 59, 59, 0.6);
+}
+
+#my-timeline .roadmap__events__event:before {
+    background-color: #000;
+}
+
+#my-timeline .roadmap__events__event:before {
+    border-radius: 50%;
+    box-shadow: 0 0 0 3px rgba(255, 119, 8, 0.6);
+}
+
+#my-timeline .roadmap__events__event:before {
+    background-color: #ff7b00;
+}
+
 .roadmap__events__event:before,
 .roadmap__events__event:after,
-.roadmap__events:before, 
+.roadmap__events:before,
 .roadmap__events:after {
     border: 1px solid rgb(212, 212, 212);
 }
@@ -93,13 +118,31 @@
     -ms-transform: scale(0);
     -o-transform: scale(0);
     transform: scale(0);
+    background: #000;
+    box-shadow: 1px 2px rgb(97, 97, 97);
+    padding: 2px 5px 2px 5px;
+}
+
+#my-knowledge .roadmap__events__event .event {
+    background: rgb(243, 131, 57);
+    box-shadow: 1px 2px rgb(143, 68, 6);
 }
 
 .roadmap__events__event .event .event__date {
+    color: rgb(255, 115, 0);
     font-weight: 600
 }
 
+#my-knowledge .roadmap__events__event .event .event__date {
+    color: rgb(7, 1, 61);
+}
+
+.roadmap__events__event .event .event__content {
+    color: #fff;
+}
+
 .roadmap__events__event .event .event__content small {
+    color: rgb(214, 210, 210);
     display: block;
 }
 
@@ -259,7 +302,7 @@
     margin: 0;
 }
 
-.roadmap__navigation > * {
+.roadmap__navigation>* {
     position: absolute;
     top: 50%;
     -webkit-transform: translateY(-46%);
@@ -270,27 +313,27 @@
     list-style: none;
 }
 
-.roadmap__navigation > * a {
+.roadmap__navigation>* a {
     display: block;
     color: #000;
     line-height: 0;
 }
 
-.roadmap__navigation > * a i {
-    font-size:30px;
+.roadmap__navigation>* a i {
+    font-size: 30px;
 }
 
-.roadmap__navigation > * a:hover {
+.roadmap__navigation>* a:hover {
     text-decoration: none;
     -webkit-box-shadow: none;
     box-shadow: none;
 }
 
-.roadmap__navigation > :first-child {
+.roadmap__navigation> :first-child {
     left: 40px;
 }
 
-.roadmap__navigation > :last-child {
+.roadmap__navigation> :last-child {
     right: 40px;
 }
 
@@ -315,73 +358,82 @@
     -o-transform: scale(1);
     transform: scale(1);
 }
+
 .event__content {
     text-transform: uppercase;
     font-size: 0.9em;
     font-weight: 600;
 }
+
 .event__date {
-     font-size: 0.85em;
+    font-size: 0.85em;
 }
+
 .roadmap__events__event .event .event__content small {
     display: block;
     color: #888;
     letter-spacing: 1px;
 }
-@media only screen and (max-width:992px) {
-    .roadmap {
-        margin: 50px auto 0;
-    }
-    .roadmap .roadmap__events {
-        padding: 0;
-        width: 80%;
-        min-height: 400px;
-    }
-    .roadmap .roadmap__events:after {
-        left: 50%;
-        top: 0;
-        width: 4px;
-        height: -webkit-calc(0% - 0px);
-        height: calc(0% - 0px);
-        -webkit-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-        -o-transform: translateX(-50%);
-        transform: translateX(-50%)
-    }
-    .roadmap .roadmap__events__event {
-        position: relative;
-        left: auto !important;
-        top: auto;
-        bottom: auto;
-        margin-left: 0;
-        width: auto;
-        height: auto;
-        min-height: 120px;
-    }
-    .roadmap .roadmap__events__event:before {
-        top: -8px;
-        bottom: auto;
-    }
-    .roadmap .roadmap__events__event:after {
-        top: 0;
-        bottom: auto;
-        width: 0;
-        height: 4px !important;
-    }
-    .roadmap .roadmap__events__event .event {
-        top: -15px;
-        bottom: auto;
-        width: 40%;
-    }
-    .roadmap .roadmap__events__event:nth-child(odd):after {
-        -webkit-transform: translateX(-100%);
-        -ms-transform: translateX(-100%);
-        -o-transform: translateX(-100%);
-        transform: translateX(-100%);
-    }
+
+.roadmap {
+    margin: 50px auto 0;
 }
 
-@media only screen and (max-width:992px) and (max-width:600px) {
+.roadmap .roadmap__events {
+    padding: 0;
+    width: 80%;
+    min-height: 400px;
+}
+
+.roadmap .roadmap__events:after {
+    left: 50%;
+    top: 0;
+    width: 4px;
+    height: -webkit-calc(0% - 0px);
+    height: calc(0% - 0px);
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateX(-50%)
+}
+
+.roadmap .roadmap__events__event {
+    position: relative;
+    left: auto !important;
+    top: auto;
+    bottom: auto;
+    margin-left: 0;
+    width: auto;
+    height: auto;
+    min-height: 120px;
+}
+
+.roadmap .roadmap__events__event:before {
+    top: -8px;
+    bottom: auto;
+}
+
+.roadmap .roadmap__events__event:after {
+    top: 0;
+    bottom: auto;
+    width: 0;
+    height: 4px !important;
+}
+
+.roadmap .roadmap__events__event .event {
+    top: -15px;
+    bottom: auto;
+    width: 40%;
+}
+
+.roadmap .roadmap__events__event:nth-child(odd):after {
+    -webkit-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    -o-transform: translateX(-100%);
+    transform: translateX(-100%);
+}
+
+@media only screen and (max-width:600px) {
     .roadmap .roadmap__events__event .event {
         width: 50%;
     }
@@ -393,40 +445,55 @@
     }
 }
 
-@media only screen and (max-width:992px) {
-    .roadmap .roadmap__events__event:nth-child(even):after {
-        -webkit-transform: translateX(0);
-        -ms-transform: translateX(0);
-        -o-transform: translateX(0);
-        transform: translateX(0);
-    }
-    .roadmap .roadmap__events__event:nth-child(even) .event {
-        right: 0;
-    }
-    .roadmap.roadmap--initialized .roadmap__events:after {
-        width: 4px;
-        height: -webkit-calc(100% - 120px);
-        height: calc(100% - 120px);
-    }
-    .roadmap.roadmap--initialized .roadmap__events .roadmap__events__event:after {
-        width: 48px;
-    }
-    .roadmap.roadmap--initialized .roadmap__events .roadmap__events__event:nth-child(odd):after {
-        -webkit-transform: translateX(-100%);
-        -ms-transform: translateX(-100%);
-        -o-transform: translateX(-100%);
-        transform: translateX(-100%);
-    }
-    .roadmap.roadmap--initialized .roadmap__events .roadmap__events__event:nth-child(even):after {
-        -webkit-transform: translateX(0);
-        -ms-transform: translateX(0);
-        -o-transform: translateX(0);
-        transform: translateX(0);
-    }
+.roadmap .roadmap__events__event:nth-child(even):after {
+    -webkit-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+}
+
+.roadmap .roadmap__events__event:nth-child(even) .event {
+    right: 0;
+}
+
+.roadmap.roadmap--initialized .roadmap__events:after {
+    width: 4px;
+    height: -webkit-calc(100% - 120px);
+    height: calc(100% - 120px);
+}
+
+.roadmap.roadmap--initialized .roadmap__events .roadmap__events__event:after {
+    width: 48px;
+}
+
+.roadmap.roadmap--initialized .roadmap__events .roadmap__events__event:nth-child(odd):after {
+    -webkit-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    -o-transform: translateX(-100%);
+    transform: translateX(-100%);
+}
+
+.roadmap.roadmap--initialized .roadmap__events .roadmap__events__event:nth-child(even):after {
+    -webkit-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
 }
 
 @media only screen and (max-width:992px) and (max-width:600px) {
     .roadmap.roadmap--initialized .roadmap__events .roadmap__events__event:after {
         width: 32px;
+    }
+}
+
+@media only screen and (max-width:479px) {
+    .roadmap__events__event .event .event__date {
+        font-size: 3.5vw;
+    }
+    .roadmap__events__event .event .event__content {
+        font-size: 4vw;
+    }
+    .roadmap__events__event .event .event__content small {
+        font-size: 3vw;
     }
 }
